--- a/style.css
+++ b/style.css
@@ -1,12 +1,84 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+
+  --primary: hsl(160deg, 100%, 30%);
+
+  --secondary-light: hsl(45deg, 100%, 50%);
+  --secondary-dark: hsl(45deg, 100%, 40%);
+
+  --black: hsl(0deg, 0%, 0%);
+  --gray-very-dark: hsl(0deg, 0%, 10%);
+  --gray-dark: hsl(0deg, 0%, 30%);
+  --gray-medium: hsl(0deg, 0%, 40%);
+  --gray-light: hsl(0deg, 0%, 60%);
+  --white: hsl(0deg, 0%, 100%);
 }
 
-/* Add styles here! */
+strong {
+  color: var(--primary);
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 2rem;
+}
+
+header {
+  margin-block-start: 96px;
+  margin-block-end: 64px;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  max-width: 320px;
+  padding-inline-start: 24px;
+  padding-inline-end: 24px;
+}
+
+main {
+  border-block-start: 8px solid var(--gray-light);
+
+  background-color: var(--gray-medium);
+  min-height: 100%;
+  padding: 72px 0;
+}
+
+.card {
+  background-color: var(--white);
+  padding-block: 8px;
+}
+
+.card p {
+  padding-inline-start: 24px;
+  padding-inline-end: 24px;
+}
+
+h2 {
+  margin: 0;
+  background-color: var(--secondary-light);
+  border-block-end: 8px solid var(--secondary-dark);
+  padding-inline-start: 24px;
+  padding-inline-end: 24px;
+}
+
+.indented-heading {
+  margin-inline-start: -8px;
+  padding-inline-start: 32px;
+}
